identityauthtemplatefe: plantilla finalizada

--- a/src/app/pages/sign-in/sign-in.html
+++ b/src/app/pages/sign-in/sign-in.html
@@ -48,8 +48,7 @@
         } }
       </div>
       <div class="text-center text-muted">
-        <small
-          >No tenes cuenta? <a [routerLink]="['/sign-up']">Registrate acá</a>
+        <small>No tenes cuenta? <a [routerLink]="['/sign-up']">Registrate acá</a>
         </small>
       </div>
       <div class="text-end">
